cleanup: remove extractOptions from code
